sprint boot src/redis.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  template:
    metadata:
      labels:
        app: redis
        tier: backend
    spec:
      containers:
      - image: redis
        name: redis
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-persistent-storage
          mountPath: /redis-master-data
      volumes:
      - name: redis-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-nfs-redis
