sprint boot src/spring_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: spring
